--- a/HTML/html-forms_finding-a11y-errors/index.html
+++ b/HTML/html-forms_finding-a11y-errors/index.html
@@ -16,12 +16,12 @@
     </p>
 
     <form for="title">
-      <fieldset>
+      <fieldset description="This form collects user information for accessibility purposes.">
         <legend>Enter your information</legend>
         <label>Name:</label>
         <input id="name-Input" type="text" />
         <label>Age:</label>
-        <input id="age-Input" type="text" />
+        <input id="age-Input" type="number" placeholder="Bitte Alter angeben"/>
         <label>Color you cannot see:</label>
         <input id="color-Input" type="color" />
         <textarea rows="7" placeholder="Leave us a message..."></textarea>
