Erledigte Aufgaben von gestern

--- a/HTML/html-forms_form-validation/index.html
+++ b/HTML/html-forms_form-validation/index.html
@@ -32,6 +32,8 @@
             name="firstName"
             id="first-name"
             placeholder="Your first name"
+            minlength="4"
+            maxlength="30"
             required
           />
 
@@ -41,11 +43,13 @@
             name="lastName"
             id="last-name"
             placeholder="Your last name"
+            minlength="4"
+            maxlength="30"
             required
           />
 
           <label for="age">Age</label>
-          <input type="number" name="age" id="age" min="14"/>
+          <input type="number" name="age" id="age" min="14" />
 
           <label for="email">Email</label>
           <input type="email" name="email" id="email" />
